# rust-fractals

./: Cargo.toml  README.md
benches/: log_bench.rs  virtual.rs
src/: colors.rs  fractal.rs  lib.rs  main.rs
tests/: log_bench.rs
