[package]
name = "rust-image-stuff"
version = "0.1.0"
authors = ["Josh Wright <madewithlinux.josh@gmail.com>"]

[dependencies]
imagefmt = "4.0.0"
palette = "0.2"
num = "*"
itertools = "0.6.0"
x86intrin = "0.4.2"
serde = "*"
serde_derive = "*"
serde_json = "*"

# [dependencies.x86intrin]
# version = "0.4.2"
# default-features = false
# features = ["avx", "sse3"]
