[package]
name = "rust_image_stuff"
version = "0.1.0"
authors = ["Josh Wright <madewithlinux.josh@gmail.com>"]

[dependencies]
imagefmt = "4.0.0"
palette = "0.2"
num = "*"
itertools = "0.6.0"
x86intrin = "0.4.2"
serde = "*"
serde_derive = "*"
serde_json = "*"
# docopt = "0.7"
# docopt_macros = "0.7"
# rustc-serialize = "0.3"
clap = {version = "~2.19.0", features = ["yaml"]}

